# web3game

./: .gitignore  BONUS_A_RAJOUTER.md  CONTRAT_SIDECAR.md  CONTRIBUTING.md  Cargo.toml  FEUILLE_DE_ROUTE.md  LICENSE  PLAN_AUTONOME.md  README.en.md  README.md  build.rs  shell.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  demande-acces.yml
.github/workflows/: build-linux-musl.yml  build-windows.yml  tests.yml
asset/: HUB.glb
docs/: ARCHITECTURE.md  CHANTIER-FOULE.md  CONTRAT_SIDECAR.md  DOUTES.md  ETAT.md  JOURNAL.md  PRESENCE-VIVANTE.md  PRINCIPES.md  README.md  SECURITE.md  TESTS.md  VISION.md  chantier-foule.md  chantier-launcher.md  chantier-reseau.md  chantier-robustesse.md  chantier-vivant.md  comprendre-le-p2p.md  coulisses.md  doutes.md  etat-du-projet.md  glossaire.md  journal.md  les-mesures.md
docs/en/: ARCHITECTURE.md  README.md  SECURITE.md  TESTS.md  chantier-foule.md  chantier-launcher.md  chantier-reseau.md  chantier-robustesse.md  chantier-vivant.md  comprendre-le-p2p.md  coulisses.md  doutes.md  etat-du-projet.md  glossaire.md  journal.md  les-mesures.md
interne/: CHANTIER-RESEAU.md  CHANTIER-ROBUSTESSE.md  DA.md  DOUTES.md  ETAT.md  README.md
src/: main.rs  math.rs  meteorites.rs  net.rs  player.rs  scenes.rs  world.rs
src/dsp/: adaptive.rs  chain.rs  codec.rs  denoise.rs  fft.rs  mod.rs  optim.rs  psycho.rs  separate.rs  spectro.rs  stoi.rs
src/net/: accuse.rs  anticheat.rs  aoi.rs  aoi_bench.rs  aoi_e2e.rs  attack.rs  bot.rs  cell.rs  control.rs  coopsim.rs  crypto.rs  demo.rs  gossip.rs  link.rs  linkprobe.rs  linkstats.rs  liveness.rs  lossbench.rs  message.rs  metrics.rs  mod.rs  natdemo.rs  netembench.rs  orb.rs  probe.rs  punch.rs  rendezvous.rs  session_window.rs  sidecar.rs  sim.rs  skin.rs  stars.rs  transport.rs  voice_bench.rs  wire.rs
src/net/netcode/: badges.rs  interpolate.rs  mod.rs  nameplates.rs  predict.rs  receive.rs  send.rs  smooth.rs  state.rs
tools/: foule-3d.sh  netem-bench.sh  sim-cool.sh  sim-netem.sh  test-nat.sh
