[package]
name = "jeu"
version = "0.1.0"
edition = "2024"

[dependencies]
# Moteur de jeu, 100 % Rust.
bevy = { version = "0.18.1" }

# La feature "wayland" n'existe QUE sur Linux (session dev en Wayland) ; sur Windows/macOS
# elle n'existe pas → on ne l'active que pour la cible Linux. Cargo UNIONNE les features de
# `[dependencies]` et de la cible : Linux = bevy+wayland (inchangé), Windows = bevy sans wayland
# (la compilation .exe devient possible). Aucun impact sur la principale ni le laptop.
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.18.1", features = ["wayland"] }

# CRYPTO (chapitre 5) : signatures à clé publique Ed25519. C'est la SEULE
# « boîte noire » du projet, et c'est volontaire : on ne code JAMAIS sa propre
# crypto (l'arithmétique sur courbe elliptique est un nid à failles, même pour
# des experts). On délègue donc le calcul de signature à cette bibliothèque
# auditée, et on construit TOUT le reste du protocole à la main autour
# (cf. src/net/crypto.rs, le seul fichier qui l'utilise).
ed25519-dalek = "2"

# On compile les dépendances (dont Bevy) en optimisé même en mode debug :
# la première compilation est longue, mais le jeu tourne ensuite de façon fluide.
[profile.dev.package."*"]
opt-level = 3

# Notre propre code reste peu optimisé pour garder une compilation rapide.
[profile.dev]
opt-level = 1
