[package]
name = "jeu"
version = "0.1.0"
edition = "2024"

[dependencies]
# CRYPTO (chapitre 5) : signatures à clé publique Ed25519. C'est la SEULE
# « boîte noire » du projet, et c'est volontaire : on ne code JAMAIS sa propre
# crypto (l'arithmétique sur courbe elliptique est un nid à failles, même pour
# des experts). On délègue donc le calcul de signature à cette bibliothèque
# auditée, et on construit TOUT le reste du protocole à la main autour
# (cf. src/net/crypto.rs, le seul fichier qui l'utilise).
ed25519-dalek = "2"

# Aléa cryptographique MULTIPLATEFORME (entropie de l'OS). Remplace la lecture en dur de
# `/dev/urandom` (qui plantait sous Windows). Crate minimale, déjà tirée transitivement.
getrandom = "0.3"

# Plus de moteur 3D : depuis la bascule vers Unreal (juin 2026), ce binaire est le CŒUR
# RÉSEAU headless. La présentation vit dans Unreal, branchée via le mode `sidecar` (socket
# locale, cf. CONTRAT_SIDECAR.md). Le cœur ne dépend donc que de la crypto + l'entropie OS.
